--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "spatie/laravel-ray",
-    "description": "Easily debug Laravel apps",
+    "name": "xndbogdan/laravel-ray-legacy",
+    "description": "Easily debug legacy Laravel apps",
     "keywords": [
         "spatie",
         "laravel-ray"
     ],
-    "homepage": "https://github.com/spatie/laravel-ray",
+    "homepage": "https://github.com/xndbogdan/laravel-ray-legacy",
     "license": "MIT",
     "authors": [
         {
@@ -13,28 +13,36 @@
             "email": "freek@spatie.be",
             "homepage": "https://spatie.be",
             "role": "Developer"
+        },
+        {
+            "name": "Mosteanu Bogdan Mihai",
+            "email": "bogdan.mosteanu@hey.com",
+            "homepage": "https://mbogdan.netlify.app",
+            "role": "Developer"
         }
     ],
     "require": {
+        "php": "^7.0|^8.0",
         "ext-json": "*",
-        "php": "^7.3|^8.0",
-        "illuminate/contracts": "^7.20|^8.19",
-        "illuminate/database": "^7.20|^8.19",
-        "illuminate/queue": "^7.20|^8.19",
-        "illuminate/support": "^7.20|^8.19",
+        "illuminate/contracts": "^5.6",
+        "illuminate/database": "^5.6",
+        "illuminate/queue": "^5.6",
+        "illuminate/support": "^5.6",
+        "league/commonmark": "^1.0|^2.0",
         "spatie/backtrace": "^1.0",
-        "spatie/ray": "^1.27.1",
+        "spatie/ray": "*",
         "symfony/stopwatch": "4.2|^5.1",
+        "voku/portable-ascii": "^1.5",
         "zbateson/mail-mime-parser": "^1.3.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "guzzlehttp/guzzle": "^7.3",
-        "laravel/framework": "^7.20|^8.19",
-        "orchestra/testbench-core": "^5.0|^6.0",
-        "phpstan/phpstan": "^0.12.93",
-        "phpunit/phpunit": "^9.3",
-        "spatie/phpunit-snapshot-assertions": "^4.2"
+        "facade/ignition": "*",
+        "guzzlehttp/guzzle": "*",
+        "laravel/framework": "*",
+        "orchestra/testbench-core": "*",
+        "phpstan/phpstan": "*",
+        "phpunit/phpunit": "*",
+        "spatie/phpunit-snapshot-assertions": "*"
     },
     "autoload": {
         "psr-4": {
