--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
     "require": {
         "php": "^7.0|^8.0",
         "ext-json": "*",
-        "illuminate/contracts": "^5.6",
-        "illuminate/database": "^5.6",
-        "illuminate/queue": "^5.6",
-        "illuminate/support": "^5.6",
+        "illuminate/contracts": "*",
+        "illuminate/database": "*",
+        "illuminate/queue": "*",
+        "illuminate/support": "*",
         "league/commonmark": "^1.0|^2.0",
         "spatie/backtrace": "^1.0",
         "spatie/ray": "*",
