--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
     "require": {
         "php": "^7.0|^8.0",
         "ext-json": "*",
-        "illuminate/contracts": "*",
-        "illuminate/database": "*",
-        "illuminate/queue": "*",
-        "illuminate/support": "*",
+        "illuminate/contracts": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/queue": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "league/commonmark": "^1.0|^2.0",
         "spatie/backtrace": "^1.0",
         "spatie/ray": "*",
