--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "illuminate/database": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "illuminate/queue": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/view": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "league/commonmark": "^1.0|^2.0",
         "spatie/backtrace": "^1.0",
         "spatie/ray": "*",
