--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         {
             "name": "Mosteanu Bogdan Mihai",
             "email": "bogdan.mosteanu@hey.com",
-            "homepage": "https://mbogdan.netlify.app",
+            "homepage": "https://remixos.dev",
             "role": "Developer"
         }
     ],
@@ -30,7 +30,7 @@
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "illuminate/view": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "league/commonmark": "^1.0|^2.0",
-        "spatie/backtrace": "^1.0",
+        "spatie/backtrace": "*",
         "spatie/ray": "*",
         "symfony/stopwatch": "4.2|^5.1",
         "voku/portable-ascii": "^1.5",
